# charybdis

./: .gitignore  .golangci.yml  Cargo.toml  LICENSE  Makefile  README.md  bridge.go  charybdis.go  charybdis_test.go  go.mod  types.go
.github/workflows/: build-libs.yml  ci.yml
adapter/: Cargo.toml
adapter/src/: config.rs  connect.rs  error.rs  lib.rs  progress.rs  results.rs  session.rs
ffi/: Cargo.toml  build.rs  cbindgen.toml
ffi/src/: lib.rs
include/: charybdis.h
scripts/: setup-upstream.sh
templates/: exec_callback.rs  latte-core.Cargo.toml  latte-core.build.rs  latte-core.lib.rs
upstream/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs
upstream/.github/workflows/: docker.yml  dockerhub-description.yml  release.yml  rust.yml
upstream/src/: config.rs  error.rs  main.rs  version.rs
upstream/src/exec/: mod.rs  workload.rs
upstream/src/report/: mod.rs  table.rs
upstream/src/scripting/: bind.rs  cass_error.rs  connect.rs  context.rs  cql_types.rs  functions.rs  mod.rs
upstream/src/stats/: histogram.rs  mod.rs  percentiles.rs  session.rs
upstream/workloads/: data_validation.rn  row_count_validation.rn
