[package]
name = "charybdis"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
description = "Clean API wrapper for latte benchmarking"

[lib]
name = "charybdis"
path = "src/lib.rs"

[dependencies]
latte-core = { path = "../build/latte-core" }
tokio = { version = "=1.44.2", features = ["rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
rune = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.1", features = ["v4"] }
