[package]
name = "charybdis-ffi"
version = "0.1.8"
edition = "2021"
license = "Apache-2.0"
description = "C FFI layer for charybdis benchmarking"

[lib]
name = "charybdis_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
charybdis = { path = "../adapter" }
serde_json = "1.0"
tokio = { version = "=1.44.2", features = ["rt-multi-thread"] }
once_cell = "1.21"

[build-dependencies]
cbindgen = "0.27"





